api-reticula-pods-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-reticula-pods
  labels:
    app: api-reticula-pods
    tier: api-reticula-pods
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 3310
    protocol: TCP
  selector:
    app: api-reticula-pods
    tier: api-reticula-pods
