ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api-reticula-pods
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "app.rcastro.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-reticula-pods
            port:
              number: 80
